NewArchive/df6c2dee8da709217388d13a4a1c8077-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘int foo(int)::bar::getX()’:
main.cpp:6:20: error: use of parameter from containing function
             return x;
                    ^
main.cpp:3:5: error:   ‘int x’ declared here
 int foo(int x) {
     ^
main.cpp:7:9: warning: control reaches end of non-void function [-Wreturn-type]
         }
         ^
